--- a/index.html
+++ b/index.html
@@ -51,5 +51,49 @@
             </div>
         </div>
     </header>
+
+    <!---------------------------------------First section------------------------------------->
+
+    <section>
+        <div class="first-section">
+            <div class="first-sec-title-block">
+                <h2 class="first-sec-title">Want To Eat?</h2>
+            </div>
+            <div class="first-sec-subtitle-block">
+                <h3 class="first-sec-subtitle">Try our Most Delicious food and it usually take minutes to deliver!</h3>
+            </div>
+            <div class="food-container">
+                <div class="food-block">
+                    <img class="food-img" src="img/burger.svg" alt="Burger">
+                    <p class="food-block-text">Burger</p>
+                </div>
+                
+                <div class="food-block">
+                    <img class="food-img" src="img/pizza.svg" alt="Pizza">
+                    <p class="food-block-text">Pizza</p>
+                </div>
+
+                <div class="food-block">
+                    <img class="food-img" src="img/fries.svg" alt="Fries">
+                    <p class="food-block-text">Fast Food</p>
+                </div>
+
+                <div class="food-block">
+                    <img class="food-img" src="img/cupcake.svg" alt="Cupcake">
+                    <p class="food-block-text">Cupcake</p>
+                </div>
+
+                <div class="food-block">
+                    <img class="food-img" src="img/sandwich.svg" alt="Sandwich">
+                    <p class="food-block-text">Sandwich</p>
+                </div>
+
+                <div class="food-block">
+                    <img class="food-img" src="img/spaghetti.svg" alt="Spaghetti">
+                    <p class="food-block-text">spaghetti</p>
+                </div>        
+            </div>
+        </div>
+    </section>
 </body>
 </html>
