added second section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </header>
 
-    <!---------------------------------------First section------------------------------------->
+    <!---------------------------------------First section----------------------------->
 
     <section>
         <div class="first-section">
@@ -92,6 +92,24 @@
                     <img class="food-img" src="img/spaghetti.svg" alt="Spaghetti">
                     <p class="food-block-text">spaghetti</p>
                 </div>        
+            </div>
+        </div>
+    </section>
+
+    <!---------------------------------------Second section---------------------------->
+
+    <section class="second-section">
+        <div class="second-section-block">
+            <div class="delivery-man-img-block">
+                <img class="delivery-man-img" src="img/shutterstock_334037675.svg" alt="Delivery Man">
+            </div>
+            <div class="delivery-titles-block">
+                <div class="delivery-title-block">
+                    <h2 class="delivery-title">We Guarantee 30 Minutes Delivery</h2>
+                </div>
+                <div class="delivery-subtitle-block">
+                    <h3 class="delivery-subtitle">If you're having a meeting, working late at night and need an extra push. Let us know and we will be there</h3>
+                </div>
             </div>
         </div>
     </section>
