added third section

--- a/index.html
+++ b/index.html
@@ -113,5 +113,106 @@
             </div>
         </div>
     </section>
+
+    <!---------------------------------------Third section----------------------------->
+
+    <section>
+        <div class="food-menu-container">
+            <div class="menu-title-block">
+                <h2 class="menu-title">Our Most Popular Recipes</h2>
+                <h3 class="menu-subtitle">Try our Most Delicious food and it usually take minutes to deliver!</h3>
+            </div>
+
+            <div class="food-menu-block">
+                <div class="dish-block">
+                    <img class="dish-img" src="img/1.svg" alt="Dish #1">
+                    <div class="dish-descritpion">
+                        <h3 class="dish-description-title">Attribute Variation</h3>
+                        <h4 class="dish-description-subtitle">Chicken, tommato, green salad, pita, ketchup,….</h4>
+                        <div class="button-price-block">
+                            <div class="add-btn">
+                                <p class="add-btn-text">Add To Cart</p>
+                            </div>
+                            <p class="dish-price">$10.99</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="dish-block">
+                    <img class="dish-img" src="img/2.svg" alt="Dish #1">
+                    <div class="dish-descritpion">
+                        <h3 class="dish-description-title">Attribute Variation</h3>
+                        <h4 class="dish-description-subtitle">Chicken, tommato, green salad, pita, ketchup,….</h4>
+                        <div class="button-price-block">
+                            <div class="add-btn">
+                                <p class="add-btn-text">Add To Cart</p>
+                            </div>
+                            <p class="dish-price">$10.99</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="dish-block">
+                    <img class="dish-img" src="img/3.svg" alt="Dish #1">
+                    <div class="dish-descritpion">
+                        <h3 class="dish-description-title">Attribute Variation</h3>
+                        <h4 class="dish-description-subtitle">Chicken, tommato, green salad, pita, ketchup,….</h4>
+                        <div class="button-price-block">
+                            <div class="add-btn">
+                                <p class="add-btn-text">Add To Cart</p>
+                            </div>
+                            <p class="dish-price">$10.99</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="dish-block">
+                    <img class="dish-img" src="img/4.svg" alt="Dish #1">
+                    <div class="dish-descritpion">
+                        <h3 class="dish-description-title">Attribute Variation</h3>
+                        <h4 class="dish-description-subtitle">Chicken, tommato, green salad, pita, ketchup,….</h4>
+                        <div class="button-price-block">
+                            <div class="add-btn">
+                                <p class="add-btn-text">Add To Cart</p>
+                            </div>
+                            <p class="dish-price">$10.99</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="dish-block">
+                    <img class="dish-img" src="img/5.svg" alt="Dish #1">
+                    <div class="dish-descritpion">
+                        <h3 class="dish-description-title">Attribute Variation</h3>
+                        <h4 class="dish-description-subtitle">Chicken, tommato, green salad, pita, ketchup,….</h4>
+                        <div class="button-price-block">
+                            <div class="add-btn">
+                                <p class="add-btn-text">Add To Cart</p>
+                            </div>
+                            <p class="dish-price">$10.99</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="dish-block">
+                    <img class="dish-img" src="img/6.svg" alt="Dish #1">
+                    <div class="dish-descritpion">
+                        <h3 class="dish-description-title">Attribute Variation</h3>
+                        <h4 class="dish-description-subtitle">Chicken, tommato, green salad, pita, ketchup,….</h4>
+                        <div class="button-price-block">
+                            <div class="add-btn">
+                                <p class="add-btn-text">Add To Cart</p>
+                            </div>
+                            <p class="dish-price">$10.99</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="show-menu-btn">
+                <p class="show-menu-btn-text">Show Our Menu</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
