--- a/index.html
+++ b/index.html
@@ -214,5 +214,43 @@
             </div>
         </div>
     </section>
+
+    <!---------------------------------------Footer------------------------------------>
+
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-card">
+                <img class="footer-icon-1" src="img/footer-card-icon-1.svg" alt="Card icon #1">
+                <div class="footer-card-description">
+                    <h3 class="card-descritpion-title card1-title">Free shipping on first order</h3>
+                    <h4 class="card-descritpion-subtitle card1-subtitle">Sign up for updates and get free shipping</h4>
+                </div>
+            </div>
+
+            <div class="footer-card">
+                <img class="footer-icon-2" src="img/footer-card-icon-2.svg" alt="Card icon #2">
+                <div class="footer-card-description">
+                    <h3 class="card-descritpion-title card2-title">30 minutes delivery</h3>
+                    <h4 class="card-descritpion-subtitle card2-subtitle">Everything you order will be quickly delivered to your door.</h4>
+                </div>
+            </div>
+
+            <div class="footer-card">
+                <img class="footer-icon-3" src="img/footer-card-icon-3.svg" alt="Card icon #3">
+                <div class="footer-card-description">
+                    <h3 class="card-descritpion-title card3-title">Best quality guarantee</h3>
+                    <h4 class="card-descritpion-subtitle card3-subtitle">We use only the best ingredients to cook the tasty fresh food for you.</h4>
+                </div>
+            </div>
+
+            <div class="footer-card">
+                <img class="footer-icon-4" src="img/footer-card-icon-4.svg" alt="Card icon #4">
+                <div class="footer-card-description">
+                    <h3 class="card-descritpion-title card4-title">Variety of dishes</h3>
+                    <h4 class="card-descritpion-subtitle card4-subtitle">In our menu you'll find a wide variety of dishes, desserts, and drinks.</h4>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
