added responsive header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -23,7 +24,10 @@
             <div class="header-content">
                 <div class="nav-content">
                     <div class="logo-block">
-                        <img src="img/logo.svg" alt="Logo">
+                        <img class="logo-img" src="img/logo.svg" alt="Logo">
+                    </div>
+                    <div class="middle-block">
+                        
                     </div>
                     <div class="navigation-block">
                         <nav class="navigation">
@@ -35,6 +39,7 @@
                                 <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
                             </ul>
                         </nav>
+                        <i class="fa-solid fa-bars burger-bar"></i>
                     </div>
                 </div>
                 <div class="title-content">
