--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="googlebot" content="notranslate" />
+    <meta name="description" content="Order food">
+    <meta name="keywords" content="order, food, fast, delivery">
+    <meta name="author" content="Alex Mkhaili">
     <title>Food order</title>
     <link rel="shortcut icon" href="img/burger-img.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +21,7 @@
 </head>
 <body>
 
-    <!----------------------------------------Header----------------------------------->
+    <!-- Header -->
 
     <header>
         <div class="header-container">
@@ -57,7 +61,7 @@
         </div>
     </header>
 
-    <!---------------------------------------First section----------------------------->
+    <!-- First section -->
 
     <section>
         <div class="first-section">
@@ -101,7 +105,7 @@
         </div>
     </section>
 
-    <!---------------------------------------Second section---------------------------->
+    <!-- Second section -->
 
     <section class="second-section">
         <div class="second-section-block">
@@ -119,7 +123,7 @@
         </div>
     </section>
 
-    <!---------------------------------------Third section----------------------------->
+    <!-- Third section -->
 
     <section>
         <div class="food-menu-container">
@@ -220,7 +224,7 @@
         </div>
     </section>
 
-    <!---------------------------------------Footer------------------------------------>
+    <!-- Footer -->
 
     <footer class="footer">
         <div class="footer-container">
