finished the project

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <section class="second-section">
         <div class="second-section-block">
             <div class="delivery-man-img-block">
-                <img class="delivery-man-img" src="img/shutterstock_334037675.svg" alt="Delivery Man">
+                <img class="delivery-man-img" src="img/shutterstock_334037675.png" alt="Delivery Man">
             </div>
             <div class="delivery-titles-block">
                 <div class="delivery-title-block">
