--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </div>
 
                 <div class="dish-block">
-                    <img class="dish-img" src="img/2.svg" alt="Dish #1">
+                    <img class="dish-img" src="img/2.png" alt="Dish #1">
                     <div class="dish-descritpion">
                         <h3 class="dish-description-title">Attribute Variation</h3>
                         <h4 class="dish-description-subtitle">Chicken, tommato, green salad, pita, ketchup,….</h4>
